--- a/include/header.html
+++ b/include/header.html
@@ -56,6 +56,7 @@
 
 
 <style>
+#header { z-index: 99999;position: relative;; }
 .header { z-index:9999;position: absolute;top:0; left: 0; width: 100%;border-bottom: 1px solid #ffffff20; transition: 0.2s}
 .header_in { display: flex;justify-content: space-between;align-items: center;color: #ffffff;transition: 0.1s }
 
