--- a/include/header.html
+++ b/include/header.html
@@ -58,22 +58,39 @@
 <style>
 #header { z-index: 99999;position: relative;; }
 .header { z-index:9999;position: absolute;top:0; left: 0; width: 100%;border-bottom: 1px solid #ffffff20; transition: 0.2s}
-.header_in { display: flex;justify-content: space-between;align-items: center;color: #ffffff;transition: 0.1s }
+.header_in { 
+  position: relative;z-index: 1;
+  display: flex;justify-content: space-between;align-items: center;color: #ffffff;transition: 0.1s }
 
 .header .logo_img { display: block;width: 200px; height:45px;background: url(./img/common/logo_w.png) no-repeat center center / contain;font-size: 1px;color:transparent; transition: 0.1s}
 
 .header.on { background-color: #ffffff; }
 .header.on .header_in{ color: var(--primary2); }
 .header.on .logo_img { background-image: url(../img/common/logo_p.png); }
-
+.header.on .depth2 { border-top: 1px solid #8a63b530; }
 .header .gnb .depth1 ul{ display: flex;justify-content: center;align-items: center; gap: 20px;height: 140px;font-size: 0.9rem;} 
+.header .gnb .depth1 li { 
+  position: relative;
+  height: 100%;display: flex;justify-content: center;align-items: center;
+  transition: 0.3s; }
+.header .gnb .depth1 li::after {  
+  content: "";
+  position: absolute;bottom: -1px;left:0;
+  display: block;width:100%;height:1px;background-color: var(--primary2);
+  opacity: 0;transition: 0.3s;
+ }
+ .header .gnb .depth1 li:hover { font-weight: bold;}
+ .header .gnb .depth1 li:hover::after { opacity: 1; }
 .header .depth2 { 
   display: none;
   position: absolute; left: 0; bottom:-100px;
   width: 100%; height: 100px; padding-left: calc((100% - 1600px)/2 + 20px);
   background-color: #ffffff;font-size: 0.8rem;color: var(--primary); 
   }
-.header .depth2 ul{ display: flex;justify-content: center;align-items: center; gap: 20px; width: 100%;height: 100%;white-space: pre;}
+.header .depth2 > div { height:100%; }
+.header .depth2 ul{ display: flex;justify-content: center;align-content: center; gap: 20px; width: 100%;height: 100%;white-space: pre;}
+.header .depth2 li { display: flex;justify-content: center;align-items: center;transition: 0.3s; }
+.header .depth2 li:hover{ color:var(--primary2);font-weight: bold; }
 .header .depth2 .sns { height: 100%; }
 .sns { display: flex;align-items:center;gap: clamp(5px,1vw,20px); transform: translateY(2px);padding-left: 20px;}
 .sns a{ display: block;width: 15px;height: 15px; background-position: center center;background-size: contain;background-repeat: no-repeat; }
