--- a/include/header.html
+++ b/include/header.html
@@ -65,10 +65,10 @@
 .header .logo_img { display: block;width: 200px; height:45px;background: url(./img/common/logo_w.png) no-repeat center center / contain;font-size: 1px;color:transparent; transition: 0.1s}
 
 .header.on { background-color: #ffffff; }
-.header.on .header_in{ color: var(--primary2); }
+.header.on .header_in{ color: var(--primary3); }
 .header.on .logo_img { background-image: url(../img/common/logo_p.png); }
 .header.on .depth2 { border-top: 1px solid #8a63b530; }
-.header .gnb .depth1 ul{ display: flex;justify-content: center;align-items: center; gap: 20px;height: 140px;font-size: 0.9rem;} 
+.header .gnb .depth1 ul{ display: flex;justify-content: center;align-items: center; gap: 20px;height: 140px;font-size: 0.9rem;)} 
 .header .gnb .depth1 li { 
   position: relative;
   height: 100%;display: flex;justify-content: center;align-items: center;
@@ -89,8 +89,8 @@
   }
 .header .depth2 > div { height:100%; }
 .header .depth2 ul{ display: flex;justify-content: center;align-content: center; gap: 20px; width: 100%;height: 100%;white-space: pre;}
-.header .depth2 li { display: flex;justify-content: center;align-items: center;transition: 0.3s; }
-.header .depth2 li:hover{ color:var(--primary2);font-weight: bold; }
+.header .depth2 li { display: flex;justify-content: center;align-items: center;transition: 0.3s;color:var(--primary4); }
+.header .depth2 li:hover{ font-weight: bold; }
 .header .depth2 .sns { height: 100%; }
 .sns { display: flex;align-items:center;gap: clamp(5px,1vw,20px); transform: translateY(2px);padding-left: 20px;}
 .sns a{ display: block;width: 15px;height: 15px; background-position: center center;background-size: contain;background-repeat: no-repeat; }
