--- a/css/contents.css
+++ b/css/contents.css
@@ -1,5 +1,46 @@
 /**** sub-common ****/
 /* * { transition: 0.2s } */
+.popup {position: fixed;left: 0;top: 0;z-index:99999;    width: 100vw;height: 100vh;background-color: #00000090;
+display: none;
+}
+.popup .close {
+  position: absolute;
+  right: 5vw;
+  top: 5vw;
+  width: 30px;
+  height: 30px;
+  font-size: 0;
+  z-index: 1;
+}
+.popup .close:after {
+  transform: rotate(-45deg);
+}
+.popup .close:before {
+  transform: rotate(45deg);
+}
+.popup .close:before, .popup .close:after {
+  content: '';
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 50px;
+  height: 1px;
+  background-color: #ffffff;
+}
+.popupwrap {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.popcont {
+  position: relative;
+  width: 70%;
+  height: 70%;
+  overflow: hidden;
+}
 .subtitwrap h3{ 
   font-family: 'Nanum Myeongjo', serif; font-weight: 700;font-size: 1.2rem; }
 .subtitwrap h4 {
@@ -17,9 +58,6 @@
 .lnb .on { color: #ffffff;}
 .lnb.no { opacity: 0; } /* lnb 사용안할 경우 */
 
-@media all and (max-width:1400px) {
-  .lnb ul { gap: 10px; }
-}
 .top_sub1 { background-image: url(../img/sub1/sub1_top.jpg); }
 .top_sub2 { background-image: url(../img/sub2/sub2_top.jpg); }
 .top_sub3 { background-image: url(../img/sub3/sub3_top.jpg); }
@@ -39,8 +77,9 @@
 .philo_area .subtitwrap { margin-bottom: 20px; }
 .philo_area h3 { margin-bottom: 0.5em;}
 .philo_area h4 {color: #ffffff;margin-bottom:0.3em }
-.philo_area .imgwrap {width:100%;max-width:480px; height: 100%;padding-bottom: 0;}
-
+.philo_area .imgwrap {
+  width:100%;max-width:480px; height: 100%;padding-bottom: 0;
+}
 .repect { padding-bottom: var(--conpadding); }
 .repect .left {
   height: 100vh;
@@ -149,7 +188,7 @@
 
 .time_tb { width: 100%;max-width: 1200px;margin-left:auto;margin-right:auto;background-color: #fff;}
 .time_tb th, .time_tb td { padding: 1em; border:1px solid #cccccc;text-align: center;font-size:1rem;font-weight: normal;}
-.time_tb thead { background-color: var(--primary2_trans);color: #fff;  }
+.time_tb thead { background-color: #c4b1da;color: #fff;  }
 .time_tb thead th{ font-family: "Pretendard-Bold"; }
 .time_tb tbody {
   font-family: 'Lato', sans-serif; font-weight:300;
@@ -163,6 +202,7 @@
 
 .sub2_1 .con1 .content { padding-right: calc( (100% - 1600px) / 2 + 20px)}
 .sub2_1 .con1 .slider .txt { position: absolute; bottom: 50px;right: 50px;color: #fff; }
+.sub2_1 .con1 .slideeach { height: min(130vw, 100vh) }
 .sub2_1 .con2 .flex { gap: 50px}
 .sub2_1 .con2 .img1 { width:50%; max-width:380px; transform: translateY(calc((50px + 10%)*(-1)));} 
 .sub2_1 .con2 .img2 { width:100%; transform: translateY(15%); } 
@@ -189,22 +229,24 @@
 .sub2_1 .con4 .col .imgwrap { padding-bottom: 64%; }
 .sub2_1 .con4 .col .txt { position: absolute; left: 40px; bottom: 30px;font-family: "Pretendard-Light";font-size: 1rem;color: #fff;}
 
-.titwrap h3 { font-size: 1.5rem;font-weight: 700;}
+.titwrap h3 { font-size: 1.7rem;font-weight: 700;}
 
 .sub2_2 .con1 .in { position: relative; }
-.sub2_2 .con1 .imgbox1.imgwrap { padding-bottom: 56%;}
+.sub2_2 .con1 .imgbox1.imgwrap { padding-bottom: max(56%,50vh);}
 .sub2_2 .con1 .mark { 
   position: absolute;top: 40px; left: 40px;
-  width: 100%;max-width: 420px; }
+  width: max(26%, 240px) }
 .sub2_2 .con1 .txt { letter-spacing: -1px; }
 .sub2_2 .con2 .col{  position: relative; }
-.sub2_2 .con2 .imgwrap { padding-bottom: 65%; }
+.sub2_2 .con2 .imgwrap { padding-bottom: max(65%, 300px); }
 .sub2_2 .con2 .col:after {content:"";display: block;position: absolute;width:100%;height: 100%;top:0;left:0;background-color: #00000080;z-index:1}
-.sub2_2 .con2 .txtwrap { position: absolute;width:100%;height: 240px;bottom:0;left:0;color: #fff;text-align: center;letter-spacing:-2px;z-index:2; }
-.sub2_2 .con2 .txtwrap h3 { margin-bottom: 30px }
+.sub2_2 .con2 .txtwrap { position: absolute;width:100%;height: 200px;
+  padding:0 10px;
+  bottom:0;left:0;color: #fff;text-align: center;letter-spacing:-2px;z-index:2; }
+.sub2_2 .con2 .txtwrap h3 { margin-bottom: 30px;font-size:1.5rem; }
 .sub2_2 .con3 { background-color: var(--background); padding: 100px 0}
 .sub2_2 .gallerywide {position: relative;z-index: 1;}
-.sub2_2 .gallerywide .imgwrap { padding-bottom: 30% }
+.sub2_2 .gallerywide .imgwrap { padding-bottom: max(30%,200px) }
 .sub2_2 .gallerywide .col { position: relative;margin-bottom: 40px;}
 .sub2_2 .gallerywide .txtwrap { 
   position: absolute;bottom: 40px; right: 40px;
@@ -222,7 +264,7 @@
 .sub2_2 .rollingcustom .track { height: 100%; }
 
 .sub2_3 { padding-bottom: var(--conpadding);  }
-.sub2_3 .gallerywide .imgwrap { padding-bottom: 50% }
+.sub2_3 .gallerywide .imgwrap { padding-bottom: max(50%,200px) }
 .sub2_3 .gallerywide .col { position: relative;margin-bottom: 100px;}
 .sub2_3 .gallerywide .mark { border: 1px solid #fff }
 .sub2_3 .gallerywide .txtwrap { 
@@ -237,15 +279,15 @@
 
 /**** sub3 ****/
 .sub3_1 .semiwidegallery { position: relative; }
-.sub3_1 .semiwidegallery .imgwrap { width: 85%; max-width: 1400px; padding-bottom: 40% }
+.sub3_1 .semiwidegallery .imgwrap { width: 85%; max-width: 1400px; padding-bottom: max(40%,400px) }
 .sub3_1 .semiwidegallery  .txtwrap { 
   position: absolute;bottom:0;right: 0;
   width: 35%;max-width: 700px;padding: 5% 5% 2%;
   background-color: #ffffff;
 }
 .sub3_1 .con2 {
-  height: 100vh;padding-left: calc((100% - 1600px) / 2);padding-top: 7vw;
-  background: url(../img/sub3/sub3_1_img02_1.jpg) center center /cover;}
+  height: max(100vh,600px);padding-left: calc((100% - 1600px) / 2);padding-top: 7vw;
+  background: url(../img/sub3/sub3_1_img02_1.jpg) no-repeat center center /cover;}
 .sub3_1 .con2 .leftbox { width:100%;max-width: 700px;margin-left: 20px }
 .sub3_1 .con2 .leftbox .normal { display: block;font-weight: 400;line-height: 1.5em; }
 .sub3_1 .con2 .leftbox strong { color: var(--subcolor_g);text-decoration: underline;text-underline-offset: 7px; }
@@ -264,7 +306,7 @@
   background-color: #fff;
   letter-spacing: -1px;font-size:0.9rem;
 }
-.sub3_2 .semiwidegallery h4 { position: absolute; left:0;bottom:-13px;font-size: 5.7vw;letter-spacing: -1px; }
+.sub3_2 .semiwidegallery h4 { position: absolute; left:0;bottom:-13px;font-size: max(5.7vw,2rem);letter-spacing: -1px; }
 .sub3_2 .con2 { background:url(../img/logo_back01.png) no-repeat left bottom var(--background2); }
 .sub3_2 .con4 .gallerylist  .imgwrap { padding-bottom:60%;  }
 .sub3_2 .con2 .tb_d2 { padding-bottom: 20px;text-align: center; }
@@ -294,7 +336,7 @@
 
 .sub3_3 .con1 { padding-top: 30px; }
 
-.sub3_4 .con1{position: relative; background-color: #eef0f3;min-height: 600px; }
+.sub3_4 .con1 { padding-top: 30px;background: url(../img/sub3/sub3_4_img01_1.png)no-repeat center top / 1400px auto ; position: relative; background-color: #eef0f3;height:100vh; min-height: 800px; }
 .sub3_4 .con1 .imgwrap { padding-bottom: 60%; }
 .sub3_4 .con1 .imgwrap::after { 
   content:"";
@@ -306,7 +348,7 @@
 .sub3_4 .con1 .txtwrap { 
   justify-content: center;
   position: absolute; left: 50%; transform: translateX(-50%);bottom: calc(60px + 5vw);
-  max-width: 700px;width:100%;
+  max-width: 800px;width:100%;padding:0 20px;
   text-align: center; }
 .sub3_4 .con1 .scrolltab {
   position: absolute; left: 50%; transform: translateX(-50%);bottom: 0;
@@ -314,15 +356,16 @@
   background-color: #ffffff;
 }
 .sub3_4 .con1 .scrolltab ul { gap: 10%;}
-.sub3_4 .con1 .scrolltab button {
-  height: 50px; padding: 0 20px 0 10px;border-bottom: 1px solid var(--default)}
-.sub3_4 .con1 .scrolltab button::before {
+.sub3_4 .con1 .scrolltab a {
+  display: block;
+  height: 50px; padding: 0 20px 0 10px;border-bottom: 1px solid var(--default);transition: 0.3s}
+.sub3_4 .con1 .scrolltab a::before {
   content: "";display: inline-block;width: 20px; height: 15px;
   background: url(../img/common/chk_g.png) no-repeat center center / contain; opacity: 0.5;
-  margin-right: 20px;
+  margin-right: 20px;transition: 0.3s;
 }
-.sub3_4 .con1 .scrolltab button.on {border-bottom-color:var(--subcolor_g); color:var(--subcolor_g) }
-.sub3_4 .con1 .scrolltab button.on::before { background-image: url(../img/common/chk.png);opacity: 1}
+.sub3_4 .con1 .scrolltab a:hover {border-bottom-color:var(--subcolor_g); color:var(--subcolor_g) }
+.sub3_4 .con1 .scrolltab a:hover::before { background-image: url(../img/common/chk.png);opacity: 1}
 .sub3_4 .after { font-size: 1rem;}
 .sub3_4 .roundbox .gallerylist2 .column3 .col { width: calc((100% - 60px) /3) }
 .sub3_4 .gallerylist.con2_2 { border-bottom:none; }
@@ -335,6 +378,8 @@
 .sub3_4 .column6 .imgwrap {  width: calc((100% - 50px)/6);padding-bottom: calc((100% - 50px)/6 * 0.7) }
 .sub3_4 .con5_2 .txt{width:100%}
 .sub3_4 .con5_2 .txt2 { width: 100%;margin-top: 30px; text-align: center;  }
+.sub3_4  .roundbox .conttit_wrap {padding-bottom: 30px !important;}
+.sub3_4 .con5 .con5_1.gallerylist2 {padding: 0 50px;}
 
 .sub3_5 .list2 .after{ font-size:1.25rem; }
 
@@ -350,6 +395,7 @@
 .sub3_8 .con1 { margin-top: 200px }
 .sub3_8 .con1 .semiwidegallery.cust3 .col { transform: translateY(-5vw);}
 .sub3_8 .con1 .txtwrap{ 
+  justify-content: center;
   position: absolute;bottom:-5vw;left: 50%;transform: translateX(-50%);
   width: 85%;margin: auto;
   background-color: var(--background2); 
@@ -374,7 +420,7 @@
 .sub3_9 .roundbox .conttit_wrap .left img { width: min(100%,230px);}
 .sub3_9 .con2  .roundbox .conttit_wrap .right { width: 70%; padding-left: 5% }
 .sub3_9 .roundbox .conttit_wrap .right img { width: min(100%,200px);}
-.sub3_9 .roundbox .conttit_wrap .right .tit {padding: 1em 0; }
+.sub3_9 .roundbox .conttit_wrap .right .tit {width:100%;padding: 1em 0; }
 .sub3_9 .roundbox .conttit_wrap .tittxt{
   font-family: 'Nanum Myeongjo', serif; font-weight: 700;font-size: 1.1rem;line-height: 1.5em;}
 .sub3_9 .roundbox .gallerylist .list .txtwrap {
@@ -408,6 +454,7 @@
 .sub4_1 .con0 .txtwrap .txt2 p{
   width: 90%;max-width: 380px;margin: auto;
   font-family: "HarlowDuoSerif-regular";font-size: 0.8rem;
+  letter-spacing: 0;
 }
 .sub4_1 .con1 { position: relative;}
 .sub4_1 .con1 .background { 
@@ -431,7 +478,7 @@
 }
 .sub4_1 .con1 .titwrap_mid h6::after { 
   content: "";display: block;
-  width: 60px; height: 1px; background-color: var(--primary);
+  width: 60px; height: 1px; background-color: var(--primary2);
   margin: 30px auto;
   }
 .sub4_1 .con1_2 { width: 90%;margin: auto; }
@@ -478,7 +525,7 @@
 
  .sub4_1 .con2  .banner3 .col {
     width: calc((100% - 90px) / 4);
-    border: 1px solid var(--primary)}
+    border: 1px solid var(--primary2)}
  .sub4_1 .con2  .banner3 .col .ptit { 
     font-size: 1.1rem;
     font-family: "Pretendard-Regular";font-weight: 400;
@@ -497,9 +544,9 @@
   .sub4_1 .con3 .background2 > div { 
     height: 100%;padding-top: max(5vw, 50px);
     background: url(../img/back_pattern.png) no-repeat center center / cover;
-    border-top: 1px solid var(--primary);
+    border-top: 1px solid var(--primary2);
     text-align: center;
-    font-size:1.5rem;;color: var(--primary);
+    font-size:1.5rem;;color: var(--primary2);
    }
   .sub4_1 .con3 .background2 .left {
     width: calc(100% /4 * 3 - 7%);
@@ -566,7 +613,7 @@
   .sub4_1 .con6 .img img {margin: auto; height: auto;}
   .sub4_1 .con6 .txttit { 
     padding: 20px 0;
-    color: var(--primary);font-size: 1.5rem; }
+    color: var(--primary2);font-size: 1.5rem; }
   .sub4_1 .con6 .col:last-child {
     border-right: none;
   }
@@ -609,10 +656,10 @@
  .sub5_1 .bannerlist .col { padding-bottom: 30px; }
  .sub5_1 .bannerlist .img {
   display: flex;justify-content: center;
-  width: 100%;height: 70%;margin-bottom: 30px}
+  width: 100%;height:max(100px,10vw);margin-bottom: 30px}
  .sub5_1 .bannerlist .img img {
     position: relative;
-    max-width: 180px;height:auto;object-fit:contain;}
+    width: max(100px, 40%);height:auto;object-fit:contain;}
 .sub5_1 .banner2 .col {
   justify-content: center;
   align-content: flex-start;
@@ -650,6 +697,7 @@
   text-align: right;
   font-family: 'Nanum Myeongjo', serif; font-weight: 700;font-size:1.15rem;line-height: 1.5em;;
 }
+.sub5_1 .list3 {margin: 0 20px}
 .sub5_1 .con2 .column5 .col { padding-top: 30px;padding-bottom: 30px; }
 
  
