--- a/css/reset.css
+++ b/css/reset.css
@@ -31,16 +31,18 @@ html {
   --w100v : calc(100vw - (100vw - 100%));
   
   --primary: #633d8c; /* #593085; */
-  --primary2: #8a63b5;
-  --primary3: #ab88bb;  /* #987eb6; */
-  --primary4: #b286e3;  /* #987eb6; */
-  --primary5_trans: #59308550;
+  --primary_trans: #633d8c50;
+  --primary2: #8a63b5;  /* #b286e3;  #987eb6; */
   --primary2_trans: #8a63b550;
   --primary2_trans10: #8a63b510;
-
-  --primback: #8160a680;
+  --primback: #8a63b580;
+  --primary3: #ab88bb;  /* #987eb6; */
+  --primary4: #c4b1da;
+  
   --subcolor_g: #2f8476;
   --subcolor_g2: #97c1ba;
+  --subcolor_gback: #4ea093;
+
   --subcolor_y: #fff4b4;
   --default: #c9beb4;
   --font: #222222;
