--- a/css/ui.css
+++ b/css/ui.css
@@ -84,10 +84,13 @@
   overflow: hidden;
 }
 .scrollon.active .content_typing {
-  animation: typing 2.5s steps(60) forwards;
+  animation: typing 6s steps(80) forwards;
 }
+.content_typing::after{
+  content: "";display:inline-block;width: 1px;height:1em;background-color: #ffffff;margin-left:20px;transform: translateY(3px);
+  animation: blank 0.5s infinite;}
 .content_typing.ani {
-  animation: typing 2.5s steps(60) forwards;
+  animation: typing 4s steps(80) forwards;
 }
 .line:nth-child(2) .content_typing.ani {
   animation-delay: 2s;
@@ -283,7 +286,10 @@
     width: 100%;
   }
 }
-
+@keyframes blank{
+  0%,49% {opacity: 1;}
+  50%,100% {opacity: 0;}
+}
 @keyframes opa {
   from { opacity: 0;}
   to { opacity: 1;}
