--- a/include/footer.html
+++ b/include/footer.html
@@ -109,7 +109,7 @@
   .foot_top .left { margin: auto;}
   .foot_bot { display: block; text-align: center;}
   .footer .sns {justify-content: center;}
-  .flex_right { justify-content: center;text-align: center; }
+  .footer .flex_right { justify-content: center;text-align: center; }
   /* .footer .copyright { order:2 } */
   .footer .admin { text-align: center; /* order:1;  margin-bottom:20px; */ }
 }
