--- a/css/layout.css
+++ b/css/layout.css
@@ -56,6 +56,8 @@
   .p20 { padding: 20px !important; }
   .p30 { padding: 30px !important; }
   .p100 { padding: 100px !important; }
+  .pb30 { padding-bottom: 30px !important; }
+  .pb50 { padding-bottom: 50px !important; }
   .pb100 { padding-bottom: 100px !important; }
   .pbt100 { padding-top: 100px !important; padding-bottom: 100px !important;}
   .pbt150 { padding-top: 150px !important; padding-bottom: 150px !important;}
@@ -77,6 +79,7 @@
   }
 
   .subpage h2 { text-align:center;font-family: Pretendard-Medium;font-size: 2.25rem; }
+  .subpage h2 span {display: inline-block;}
   .subpage h4 { font-family: "HarlowDuoSerif-regular";
     font-weight: 400;
     font-size: 4.8rem;
@@ -515,7 +518,9 @@
     margin: 20px auto;}
   .banner2 .col {align-content: flex-start;}
   .banner2 .tit { height: auto;padding: 20px 0 }
-
+  /* 0201 */  .gallerylist .list2 {
+    padding: 30px 0px;margin: 0 20px;
+}
 }
 
 
@@ -568,7 +573,7 @@
   .imgbox { gap: 10px;}
 
   .gallerylist { padding:15px 0 }
-  
+  .gallerylist .titwrap:nth-child(1) {padding-top: 20px;}
   .semiwidegallery.cust1 .left {padding-right: 0px;  }
   .semiwidegallery.cust1 .right {padding-left: 0px;}
   .gallerylist .list.column3 {display: flex;}
@@ -581,7 +586,7 @@
   .gallerylist .list.column4 .col {width:25%;padding: 0 10px !important;margin-bottom: 20px;}
   .gallerylist .list.column4.gapborder .col:nth-child(4n) { border-right: none}
 
-  .gallerylist .list2 { display:flex;padding: 10px 0px;margin: 0 20px;gap: 10px;}
+  .gallerylist .list2 { display:flex;padding: 10px 0px;margin: 0 10px !important;gap: 10px;}
   .gallerylist .list2.column3 .col {width: calc((100% - 30px) / 3);}
   .gallerylist .list2.column4 {gap:10px;}
   .gallerylist .list2.column4 .col {width: calc((100% - 30px) / 4);}
@@ -605,7 +610,10 @@
   .roundbox .titwrap::after { width: 30px;height: 30px; }
   .roundbox .titwrap h3 { font-size: 1.2rem}
   .roundbox .content {padding: 20px 10px;}
+  .gallerylist .list.column4 .col {width: 50%;margin-bottom: 0;}
+  .gallerylist .list .txtwrap {padding-top: 10px;}
 
+  .sub3_2 .con4 .list.column2 {margin-bottom:30px;}
 
 }
 /* @media all and (orientation: Portrait) {
@@ -627,7 +635,7 @@
 
 }
 @media all and (max-width:360px) {
-  .gallerylist .list.column4 .col {width: 50%;margin-bottom: 0;}
+
 
   .gallerylist .list.column3 {display: flex;flex-wrap: wrap;}
   .gallerylist .list.column3 .col {width:100%;padding:0 10px;margin-bottom: 20px;}
