--- a/css/responsive.css
+++ b/css/responsive.css
@@ -113,6 +113,8 @@
     display: flex;flex-wrap: wrap;align-content: center;justify-content: center;
     height:100%;
   }
+  .sub2_3 .gallerywide .txtwrap .tit { margin-bottom: 20px;}
+  .sub2_3 .gallerywide .col {margin-bottom: 20px;}
   .sub3_1 .semiwidegallery .imgwrap { width: 100%; }
   .sub3_1 .semiwidegallery .txtwrap {
     position: static;width: 100%;max-width: 100%;padding: 30px 20px;
@@ -120,6 +122,7 @@
 }
   .sub3_1 .con2 {position: relative;background-position: right -200px bottom;}
   .sub3_1 .certif{ position: absolute;bottom:20px; }
+  .sub3_2 .con2 {padding-top: 70px !important;}
   .sub3_2 .semiwidegallery {display: block;}
   .sub3_2 .semiwidegallery .left { width: 100%; }
   .sub3_2 .semiwidegallery .left .imgwrap{ padding-bottom: max(50%,300px); }
@@ -197,24 +200,26 @@
   .sub2_1 .con1 .slick-dots { bottom: 70px;right:40px;}
   .sub2_1 .con2 .flex { gap:10px; }
   .sub2_1 .con3 .slick-dots { right: 0px;}
-  .flexgallery_column2 { gap: 20px; }
-  .flexgallery_column2 > div {width: calc( (100% - 20px)/2 );}
+  .sub2_1 .con4 .col .txt {left: 10px; bottom: 10px;}
+  .flexgallery_column2 { gap: 10px; }
+  .flexgallery_column2 > div {width: calc( (100% - 10px)/2 );}
 
   .time_tb th, .time_tb td { padding: 10px 5px;font-size: 11px;}
   .time_tb .pursquare_solid { padding: 3px 2px; font-size: 9px;margin-top: 3px;}
   
   .imgbox > div {min-width: auto; max-width:auto; }
 
+  .sub2_2 .con3 { padding:50px 0; }
   .sub2_2 .rims .column4 .col { width: 25%}
   .sub2_2 .gallerywide .txtwrap {position: static;transform: translateX(0);}
 
   .sub3_2 .banner { display: flex;gap:10px}
   .sub3_2 .banner .col {
       align-content: flex-start;
-      margin-bottom: 30px;padding: 30px 0;width: calc((100% - 20px) / 3);}
-  .sub3_2 .banner .icon { margin: 0 auto 20px; }
+      margin-bottom: 20px;padding: 20px 0;width: calc((100% - 20px) / 3);}
+  .sub3_2 .banner .icon { margin: 0 auto 20px;width: 50px; }
   .sub3_2 .banner h5 { height: 50px;margin-bottom: 30px; }
-  .sub3_2 .banner .txt { height: auto;padding-top: 30px; }
+  .sub3_2 .banner .txt { height: auto;padding-top: 20px; }
   .sub3_2 .tb_d2 { display: flex; }
   .sub3_2 .tb_d2 .col {width:50%;}
   .sub3_2 .con2 .tb_d2 .col > div {
@@ -223,7 +228,7 @@
   .sub3_2 .con2 .tb_d2 .col > div p {display: block;}
   .sub3_2 .gallerylist .gapborder .col:nth-child(2n) { border-right: none; }
   .sub3_2 .gallerylist .list .col { margin-bottom: 20px; }
-  
+  .sub3_2 .con2 .tb_d2 .col > div.th { font-size: 1.1rem }
   .sub3_4 .con1 { background-size: 200%;height: auto;min-height: auto;padding-top:90%;margin-bottom:50px !important }
   .sub3_4 .con1 .txtwrap {margin-bottom: 50px;position: static;transform: translateX(0);padding:0}
   .sub3_4 .con1 .scrolltab {position: static;transform: translateX(0);padding:10px;width:100%;}
@@ -348,14 +353,12 @@
   .sub2_1 .con2 .img2 {transform: translateY(-15%);}
   .sub2_1 .con3 { padding-top:50px }
 
-  .sub2_2 .rims .column4 .col { width: 50%; }
-  .sub2_2 .rims .column4 .col:nth-child(2n) { border-right: none; }
-  .sub2_2 .rims .column4 .col {margin: 10px 0;}
+  .sub2_2 .rims .column4 .col { width: 50%;border-right: none; margin: 10px 0;}
   .sub2_2  .mobr {display: block; }
   .sub2_2  .rims .titwrap { margin-bottom:30px !important; }
   .sub2_2 .rims{margin-bottom: 50px;}
   .sub2_2 .con2 .col { width: 100%;height: auto }
-  .sub2_2 .gallerywide .txtwrap {display: block;}
+  .sub2_2 .gallerywide .txtwrap {display: block;text-align: center;}
   .sub2_2 .gallerywide .txtwrap .tit { padding:10px;border-right: none;border-bottom: 1px solid #cccccc; }
   .sub2_3 .gallerywide .mark { right:10px;top:10px; }
 
@@ -494,7 +497,7 @@
 }
 
 @media all and (max-width:320px) { 
-  .nobr_mo p { display: inline; }
+  .nobr_mo p, .nobr_self { display: inline; }
   .sub3_2 .con2 .tb_d2 .col > div.th { font-size: 1.1rem; }
   .sub3_2 .con2 .tb_d2 .col > div { font-size: 0.8rem }
 
